--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -22,6 +22,7 @@ html {
 	font-family: $body-font;
 	padding-left: 2%;
 	.intro-name {
+		padding-top: 10px;
 		font-family: $title-font;
 		display: block;
 		color: $text-color;
@@ -111,6 +112,37 @@ html {
 			}
 			#code:hover{
 				transform: scale(1.1);
+			}
+			.project-info{
+				display: block;
+				box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				.project-content{
+					height: 100%;
+					.proj-image{
+						width:100%;
+					}
+				}
+				.project-information{
+					.cancel{
+						cursor:pointer;
+						position:relative;
+						width: 100%;
+						height: 30px;
+					}
+					.project-title{
+						font-weight: bold;
+						position:relative;
+						text-align: center;
+
+					}
+					.proj-description-detail{
+						text-align: left;
+						position:relative;
+					}
+				}
 			}
 		}
 
