--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -21,17 +21,18 @@ html {
 }
 /* line 24, ../sass/main.scss */
 .container .intro-name {
+  padding-top: 10px;
   font-family: "Nunito", sans-serif;
   display: block;
   color: #A9A9A9;
   font-size: 40px;
 }
-/* line 30, ../sass/main.scss */
+/* line 31, ../sass/main.scss */
 .container .definition {
   font-family: "Nunito", sans-serif;
   display: block;
 }
-/* line 35, ../sass/main.scss */
+/* line 36, ../sass/main.scss */
 .container .abt-container .my_img {
   float: right;
   height: 50vw;
@@ -39,14 +40,14 @@ html {
   top: 50%;
   transform: translateY(-20%);
 }
-/* line 43, ../sass/main.scss */
+/* line 44, ../sass/main.scss */
 .container .abt-container .bio {
   float: left;
   margin: 0;
   padding-left: 15px;
   font-weight: 300;
 }
-/* line 51, ../sass/main.scss */
+/* line 52, ../sass/main.scss */
 .container .section {
   padding-left: -2%;
   position: relative;
@@ -55,7 +56,7 @@ html {
   font-weight: 300;
   padding-top: 40px;
 }
-/* line 62, ../sass/main.scss */
+/* line 63, ../sass/main.scss */
 .container .work-container .software {
   float: left;
   height: 40vw;
@@ -65,17 +66,17 @@ html {
   margin-bottom: 50px;
   text-align: center;
 }
-/* line 71, ../sass/main.scss */
+/* line 72, ../sass/main.scss */
 .container .work-container .software .projects {
   display: block;
   margin: 0;
 }
-/* line 74, ../sass/main.scss */
+/* line 75, ../sass/main.scss */
 .container .work-container .software .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 77, ../sass/main.scss */
+/* line 78, ../sass/main.scss */
 .container .work-container .software .projects .project-container .projectCell {
   cursor: pointer;
   font-weight: bold;
@@ -83,11 +84,11 @@ html {
   padding: 10px;
   transition: .2s ease-in-out;
 }
-/* line 83, ../sass/main.scss */
+/* line 84, ../sass/main.scss */
 .container .work-container .software .projects .project-container .projectCell .projectContent:hover {
   transform: scale(1.1);
 }
-/* line 87, ../sass/main.scss */
+/* line 88, ../sass/main.scss */
 .container .work-container .software .projects .project-container .description {
   width: 80%;
   text-align: center;
@@ -99,7 +100,7 @@ html {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 100, ../sass/main.scss */
+/* line 101, ../sass/main.scss */
 .container .work-container .software #code {
   cursor: pointer;
   display: block;
@@ -111,11 +112,45 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 112, ../sass/main.scss */
+/* line 113, ../sass/main.scss */
 .container .work-container .software #code:hover {
   transform: scale(1.1);
 }
-/* line 117, ../sass/main.scss */
+/* line 116, ../sass/main.scss */
+.container .work-container .software .project-info {
+  display: block;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+/* line 122, ../sass/main.scss */
+.container .work-container .software .project-info .project-content {
+  height: 100%;
+}
+/* line 124, ../sass/main.scss */
+.container .work-container .software .project-info .project-content .proj-image {
+  width: 100%;
+}
+/* line 129, ../sass/main.scss */
+.container .work-container .software .project-info .project-information .cancel {
+  cursor: pointer;
+  position: relative;
+  width: 100%;
+  height: 30px;
+}
+/* line 135, ../sass/main.scss */
+.container .work-container .software .project-info .project-information .project-title {
+  font-weight: bold;
+  position: relative;
+  text-align: center;
+}
+/* line 141, ../sass/main.scss */
+.container .work-container .software .project-info .project-information .proj-description-detail {
+  text-align: left;
+  position: relative;
+}
+/* line 149, ../sass/main.scss */
 .container .work-container .design {
   float: right;
   height: 40vw;
@@ -124,7 +159,7 @@ html {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-/* line 125, ../sass/main.scss */
+/* line 157, ../sass/main.scss */
 .container .work-container .design #design {
   cursor: pointer;
   display: block;
@@ -136,11 +171,11 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 136, ../sass/main.scss */
+/* line 168, ../sass/main.scss */
 .container .work-container .design #design:hover {
   transform: scale(1.1);
 }
-/* line 142, ../sass/main.scss */
+/* line 174, ../sass/main.scss */
 .container .nav-bg {
   position: fixed;
   margin: 0;
@@ -151,31 +186,31 @@ html {
   opacity: 0.95;
   z-index: 0;
 }
-/* line 151, ../sass/main.scss */
+/* line 183, ../sass/main.scss */
 .container .nav-bg .bottom-nav {
   z-index: 1;
   background: white;
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 157, ../sass/main.scss */
+/* line 189, ../sass/main.scss */
 .container .nav-bg .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 164, ../sass/main.scss */
+/* line 196, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 167, ../sass/main.scss */
+/* line 199, ../sass/main.scss */
 li {
   cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 172, ../sass/main.scss */
+/* line 204, ../sass/main.scss */
 li .cross {
   display: block;
   position: absolute;
@@ -185,7 +220,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 182, ../sass/main.scss */
+/* line 214, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -193,7 +228,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 188, ../sass/main.scss */
+/* line 220, ../sass/main.scss */
 #jahan {
   width: auto;
   height: auto;
@@ -201,7 +236,7 @@ li .cross {
   max-height: 100%;
 }
 
-/* line 196, ../sass/main.scss */
+/* line 228, ../sass/main.scss */
 .definition span {
   position: absolute;
   font-family: "Nunito", sans-serif;
@@ -217,7 +252,7 @@ li .cross {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 208, ../sass/main.scss */
+/* line 240, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -226,7 +261,7 @@ li .cross {
   animation-delay: 3s;
 }
 
-/* line 208, ../sass/main.scss */
+/* line 240, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -235,7 +270,7 @@ li .cross {
   animation-delay: 6s;
 }
 
-/* line 208, ../sass/main.scss */
+/* line 240, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -244,7 +279,7 @@ li .cross {
   animation-delay: 9s;
 }
 
-/* line 208, ../sass/main.scss */
+/* line 240, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
